tests/test_exception/good/exception.catala_en
## Test

```catala
declaration scope A:
  context x content integer

scope A:
  label base_x
  definition x equals 0

  exception base_x
  definition x equals 1
```
