tests/test_exception/bad/dangling_exception.catala_en
## Test

```catala
declaration scope A:
  context x content integer
  context y content integer

scope A:
  label base_y
  definition y equals 0

  exception base_y
  definition x equals 1
```
